--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -100,5 +100,5 @@
     });
 </script>
 
-<script src="http://e.jikexueyuan.com/static/js/growingio.js"></script>
+<!--<script src="http://e.jikexueyuan.com/static/js/growingio.js"></script>-->
 {% endblock %}
