--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="shortcut icon" href="{{ "images/favicon.png"|resolveFile }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ "assets/favicon.jpg"|resolveFile }}" type="image/x-icon">
     
     <link rel="stylesheet" href="{{ 'assets/website/page_custom.min.css'|resolveFile }}">
     {% if page.next and page.next.path %}
